cluster/infrastructure/mariadb/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 11.8.8
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/version: 11.8.8
    spec:
      automountServiceAccountToken: false
      containers:
      - image: lscr.io/linuxserver/mariadb:11.8.8
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - mountPath: /config
          name: pvc-volume
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 2Gi
      - args:
        - --mysqld.address=localhost:3306
        - --mysqld.username=root
        image: prom/mysqld-exporter:v0.20.0
        name: mysqld-exporter
        ports:
        - containerPort: 9104
          name: mysqld-exporter
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 128Mi
      volumes:
      - name: pvc-volume
        persistentVolumeClaim:
          claimName: mariadb-pvc
